# resumewright

./: .gitignore  .npmrc  .pnpmfile.cjs  .prettierignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  SECURITY.md  deny.toml  knip.json  mise.toml  package.json  playwright.config.mjs  pnpm-lock.yaml
.cargo/: config.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: audit.yml  ci-weekly.yml  ci.yml  pre-release.yml  update-visual-baselines.yml  visual-tests-custom-fonts.yml
.husky/: pre-commit
docs-public/: ARCHITECTURE.md  DEVELOPMENT.md  SETUP.md  TROUBLESHOOTING.md
scripts/: audit-dependencies.sh  check-wasm-size.sh  cleanup-build-artifacts.sh  download-pdfium-linux.sh  pre-commit  transpile-fixtures.mjs  update-visual-baselines.ts  validate-bundle-size.js
test-fixtures/baselines/multi-page/: .gitkeep
test-fixtures/fonts/: LICENSE-FONTS.md  README.md
test-fixtures/fonts/large/: README.md
test-fixtures/performance/: large-cv-500-nodes.tsx  pathological-nested-flex.tsx
test-fixtures/transpiled/: 01-single-column-traditional.js  02-two-column-modern.js  03-minimal-simple.js  04-technical-developer.js
test-fixtures/tsx-samples/benchmarks/: cv_large.tsx  cv_medium.tsx  cv_small.tsx
test-fixtures/tsx-samples/multi-page/: 01-two-page-traditional.tsx  02-three-page-academic.tsx  03-six-page-executive.tsx  03-two-page-ats-optimized.tsx
test-fixtures/tsx-samples/single-page/: 01-single-column-traditional.tsx  01-web-safe-fonts.tsx  02-font-weights.tsx  02-two-column-modern.tsx  03-font-styles.tsx  03-minimal-simple.tsx  04-colors.tsx  04-technical-developer.tsx  05-mixed-styling.tsx  06-google-font-roboto.tsx  07-google-font-open-sans.tsx  08-google-font-mixed.tsx  09-google-font-variants.tsx
